# cone-reddit

./: .gitignore  README.md  bundle.sh  cc-reddit.cabal  cone-reddit.cabal  run.sh
assets/: bgrnd.psd  cone_reddit.js
html/: browserconfig.xml  index.html  manifest.json  shape.psd
html/css/: main.css
html/js/: cone_reddit.js  cone_reddit.mini.js
prefs/: default.json
src/: ConeUtils.hs  Config.hs  Favicon.hs  Main.hs
tests/locust/: locustfile.py  run.sh
upstart/: cone-reddit.conf
