
name:                cone-reddit
version:             0.1.0.0
synopsis:            ConeCanvas for Reddit
description:         Cone for Reddit is a 3D visualization of the Reddit community based on Symbolian's ConeCanvas.
homepage:            https://github.com/Symbolian/cone-reddit
license:             AllRightsReserved
author:              Vincent Ahrend
maintainer:          vincent.ahrend@symbolian.net
-- copyright:
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10


Flag release
    Description:    Disables all debugging/testing types, instances and code
    Default:        False

Flag Profiling
    Description:    Do a profiling build
    Default:        False


executable cone-reddit
  main-is:             Main.hs

  ghc-options:         -threaded -with-rtsopts=-N

  build-depends:
    base >=4.8 && <5,
    aeson >=0.11,
    bytestring,
    reddit >=0.2,
    transformers >=0.4,
    text >= 1.2,
    warp >= 3.2,
    ConeServer >= 0.4.2.1,
    hoauth2,
    prizm >= 0.3.1.2,
    file-embed >= 0.0.8.1,
    directory,
    containers,
    bytestring,
    time

  hs-source-dirs:         src

  default-language:       Haskell2010

  if flag(release)
      cpp-options:        -DRELEASE
      ghc-options:        -O2 -funbox-strict-fields
  else
      ghc-options:        -Wall -fno-warn-unused-do-bind

  if flag(profiling)
      ghc-options:        -fprof-auto
